--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description"
         content="Explore PW Skills courses, mentors, and success stories. Find free and paid courses to advance your career.">
     <title>PW Skills Courses</title>
-    <link rel="stylesheet" href="https://cdn.shopify.com/shopifycloud/world/brochure/production-pillar/assets/styles-D1h1bLMl.css">
+    <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet" />
     <link href="index.css" rel="stylesheet" />
