--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
         </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.4.0/purify.min.js"></script>
+    <!-- Custom Script -->
     <script src="index.js"></script>
 </body>
 
